--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
         <title>BookFlix</title>
     </head>
     <body>
-        <header class="home-header">
-            <div class="home-container-header">
-                <a class="home-logo-header" href="#home">BOOKFLIX</a>
-                <div class="home-buscador">
-                    <input type="home-text" placeholder="Buscar">
-                    <div class="home-boton">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>            
-                </div>
+        <header>
+            <h1>Bookflix</h1>
+            <div class="buscador">
+                <input type="text" placeholder="Buscar">
+                <div class="boton">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>            
             </div>
         </header>
+        
         <main class="home-main">
             <div class="home" id="home">
                     <h1 class="title-home">Tu blog de reseñas literarias</h1>
@@ -73,118 +72,28 @@
             </div>
         </main>
         <footer>
-                <div class="home-footer-container">
-                    <p class="home-footer-logo">BOOKFLIX</p>
-                    <p class="home-footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
-                    <div class="home-footer-div">
-                        <img class="home-footer-icon" src="./img/icons8-facebook-nuevo-50.png" alt="Facebook">
-                        <img class="home-footer-icon" src="./img/icons8-instagram-50.png" alt="Instagram">
-                        <img class="home-footer-icon" src="./img/icons8-twitterx-50.png" alt="Twitter">
-                    </div>
+            <div class="footer-container">
+                <p class="footer-logo">BOOKFLIX</p>
+                <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+                <div class="footer-div">
+                    <i class="fa-brands fa-instagram footer-icon "></i>
+                    <i class="fa-brands fa-facebook footer-icon"></i>
+                    <i class="fa-brands fa-square-x-twitter footer-icon"></i>
                 </div>
-                <nav class="navbar">
-                    <ul>
-                        <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
-                        <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-                        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-                        <li><a href="my_list.html"><i class="fa-solid fa-heart"></i></a></li>
-                        <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
-                        <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
-                        <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
-                    </ul>
-                </nav>
+            </div>
+
         </footer>
+        
+    <nav class="navbar">
+        <ul>
+            <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="pages/detail.html"><i class="fa-solid fa-star"></i></a></li>
+            <li><a href="pages/profile.html"><i class="fa-solid fa-user"></i></a></li>
+            <li><a href="pages/recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+            <li><a href="pages/review.html"><i class="fa-solid fa-glasses"></i></a></li>
+            <li><a href="pages/about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+        </ul>
+    </nav>
+
         <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
     </body>
-</html><!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="">
-        <meta name="copyright" content="Bookflix">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
-        <link rel="icon" type="" href="">
-        <title>BookFlix</title>
-    </head>
-    <body>
-        <header>
-            <div class="container-header">
-                <a class="logo-header" href="#home">BOOKFLIX</a>
-                <div class="buscador">
-                    <input type="text" placeholder="Buscar">
-                    <div class="boton">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>            
-                </div>
-            </div>
-        </header>
-        <main class="main">
-            <div class="home" id="home">
-                    <h1 class="title-home">Tu blog de reseñas literarias</h1>
-                    <p class="p-home">¿Quieres ver Bookflix ya?</p>
-                    <div class="div-btn-home">
-                        <button class="btn-home">Comenzar</button>
-                    </div>
-            </div>        
-            <div class="div-seccion">
-                <h2 class="title-seccion">Recomendados</h2>
-                <a href="">Ver más</a>
-                <div class="cont-libros">
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro1.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro2.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro3.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-                </div>
-            </div>
-            <div class="div-seccion recientes">
-                <h2 class="title-seccion">Recientes</h2>
-                <a href="recent.html">Ver más</a>
-                <div class="cont-libros">
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro1.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro2.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="cont-libro">
-                        <img class="libro" src="img/libro3.jpg" alt="">
-                        <h3 class="title-libro">Título</h3>
-                        <p class="puntuacion">Puntuacion</p>
-                    </div>
-            </div>
-        </main>
-        <footer>
-                <div class="footer-container">
-                        <nav class="navbar">
-                            <ul>
-                                <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
-                                <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-                                <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-                                <li><a href="my_list.html"><i class="fa-solid fa-heart"></i></a></li>
-                                <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
-                                <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
-                                <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
-                            </ul>
-                        </nav>
-                </div>
-        </footer>
-        <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
-    </body>
-</html>
