--- a/pages/busqueda-avanzada.html
+++ b/pages/busqueda-avanzada.html
@@ -41,6 +41,31 @@
             <input class="btn" type="submit" name="buscar" value="Buscar">
         </div>
     </form>
-</body>
    </main>
+
+   <footer>
+        <div class="footer-container">
+            <p class="footer-logo">BOOKFLIX</p>
+            <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+            <div class="footer-div">
+                <i class="fa-brands fa-instagram footer-icon "></i>
+                <i class="fa-brands fa-facebook footer-icon"></i>
+                <i class="fa-brands fa-square-x-twitter footer-icon"></i>
+            </div>
+        </div>
+
+    </footer>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="pages/detail.html"><i class="fa-solid fa-star"></i></a></li>
+            <li><a href="pages/profile.html"><i class="fa-solid fa-user"></i></a></li>
+            <li><a href="pages/recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+            <li><a href="pages/review.html"><i class="fa-solid fa-glasses"></i></a></li>
+            <li><a href="pages/about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+        </ul>
+    </nav>
+
+   </body>
 </html>
