--- a/pages/detail.html
+++ b/pages/detail.html
@@ -20,17 +20,18 @@
             </div>            
         </div>
     </header>
+
    <main>
     <div class="detail-container">
         <h1>El viento conoce mi nombre</h1>
         <div class="detail-container-dos">
-            <div class="img-container">
+            <div class="detail-img-container">
                 <img src="../img/el-viento-conoce-mi-nombre.jpg">
             </div>
             <div class="detail-container-tres">
                 
-            <p class="texto-principal">Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra.</p>
-            <div class="atributos">
+            <p id="detail-texto-principal">Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra.</p>
+            <div class="detail-atributos">
                 <div>
                     <h2>Año de publicacion:<a href="#">2022</a></h2>
                 </div>
@@ -184,20 +185,32 @@
             </section>
     </div>
    </main>
- <footer>
-<script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
- </footer>
-</body>
-</html>
+   <footer>
+    <div class="footer-container">
+        <p class="footer-logo">BOOKFLIX</p>
+        <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+        <div class="footer-div">
+            <i class="fa-brands fa-instagram footer-icon "></i>
+            <i class="fa-brands fa-facebook footer-icon"></i>
+            <i class="fa-brands fa-square-x-twitter footer-icon"></i>
+        </div>
+    </div>
+
+</footer>
 
 <nav class="navbar">
     <ul>
         <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
-        <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-        <li><a href="my_list.html"><i class="fa-solid fa-heart"></i></a></li>
+        <li><a href="#"><i class="fa-solid fa-star"></i></a></li>
+        <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
         <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
         <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
         <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
     </ul>
 </nav>
+
+<script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
