--- a/pages/profile.html
+++ b/pages/profile.html
@@ -26,6 +26,7 @@
         </div>
       </div>
     </header>
+
     <main>
       <div class="info-personal">
         <h3>Información personal</h3>
@@ -36,7 +37,7 @@
           <p><strong>Contraseña:</strong>  ******</p>
         </section>
       </div>
-      <div class="mi-lista">
+      <div class="profile-recientes">
         <h2>Mi lista</h2>
         <div class="cards-lista-sm">
           <div class="card">
@@ -105,33 +106,30 @@
         <p>Eliminar mi cuenta</p>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+          <p class="footer-logo">BOOKFLIX</p>
+          <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+          <div class="footer-div">
+              <i class="fa-brands fa-instagram footer-icon "></i>
+              <i class="fa-brands fa-facebook footer-icon"></i>
+              <i class="fa-brands fa-square-x-twitter footer-icon"></i>
+          </div>
+      </div>
 
-    <nav class="navbar">
-      <ul>
-        <li>
-          <a href="../index.html"><i class="fa-solid fa-house"></i></a>
-        </li>
-        <li>
-          <a href="detail.html"><i class="fa-solid fa-star"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-user"></i></a>
-        </li>
-        <li>
-          <a href="my_list.html"><i class="fa-solid fa-heart"></i></a>
-        </li>
-        <li>
-          <a href="recent.html"><i class="fa-solid fa-list-check"></i></a>
-        </li>
-        <li>
-          <a href="review.html"><i class="fa-solid fa-glasses"></i></a>
-        </li>
-        <li>
-          <a href="about.html"><i class="fa-solid fa-circle-info"></i></a>
-        </li>
-      </ul>
-    </nav>
+  </footer>
+
+  <nav class="navbar">
+    <ul>
+        <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+        <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
+        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+        <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+        <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
+        <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+    </ul>
+</nav>
+  </nav>
     <script
       src="https://kit.fontawesome.com/63ed2924ae.js"
       crossorigin="anonymous"
