--- a/pages/recent.html
+++ b/pages/recent.html
@@ -44,18 +44,26 @@
             </div>
         </main>
 
-        <footer>    
-            Footer
+        <footer>
+            <div class="footer-container">
+                <p class="footer-logo">BOOKFLIX</p>
+                <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+                <div class="footer-div">
+                    <i class="fa-brands fa-instagram footer-icon "></i>
+                    <i class="fa-brands fa-facebook footer-icon"></i>
+                    <i class="fa-brands fa-square-x-twitter footer-icon"></i>
+                </div>
+            </div>
+
         </footer>
 
-
+   
         <nav class="navbar">
             <ul>
                 <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-                <li><a href="my_list.html"><i class="fa-solid fa-heart"></i></a></li>
-                <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+                <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>                
+                <li><a href="#"><i class="fa-solid fa-list-check"></i></a></li>
                 <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
                 <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
             </ul>
@@ -63,5 +71,5 @@
 
        
     <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
