--- a/pages/registro.html
+++ b/pages/registro.html
@@ -22,10 +22,10 @@
     </header>
     <main>
       <form>
-        <section class="formulario">
+        <section class="formulario-registro">
           <h4>Formulario Registro</h4>
           <input
-            class="controles"
+            class="registro-controles"
             type="text"
             name="nombres"
             id="nombres"
@@ -94,5 +94,29 @@
         </section>
       </form>
     </main>
+    <footer>
+      <div class="footer-container">
+          <p class="footer-logo">BOOKFLIX</p>
+          <p class="footer-copy">&#169 2024 Bookflix - All Rights Reserved.</p>
+          <div class="footer-div">
+              <i class="fa-brands fa-instagram footer-icon "></i>
+              <i class="fa-brands fa-facebook footer-icon"></i>
+              <i class="fa-brands fa-square-x-twitter footer-icon"></i>
+          </div>
+      </div>
+
+  </footer>
+
+
+  <nav class="navbar">
+      <ul>
+          <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+          <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
+          <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
+          <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+          <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
+          <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+      </ul>
+  </nav>
   </body>
 </html>
